src/objects/Sales_Competency_Rating__c/Sales_Competency_Rating__c.object-meta.xml
<CustomObject>
    <description>Sales Competency, Sales Competency Rating, and Development Action custom objects make up the PMT Sales Competency module for assessing sales employees on selling competencies and identifying growth/development areas.</description>
    <label>Sales Competency Rating</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Competency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Competency Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>