src/objects/Sales_Competency_Rating__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Identification, Qualification &amp; Prioritization</fullName>
                <color>#0B6FCE</color>
                <label>Opportunity Identification, Qualification &amp; Prioritization</label>
            </value>
            <value>
                <fullName>Account Planning</fullName>
                <color>#78C953</color>
                <label>Account Planning</label>
            </value>
            <value>
                <fullName>Negotiations, Closing and Administration</fullName>
                <color>#E27001</color>
                <label>Negotiations, Closing and Administration</label>
            </value>
            <value>
                <fullName>Industry &amp; Customer Knowledge</fullName>
                <color>#A845DC</color>
                <label>Industry &amp; Customer Knowledge</label>
            </value>
            <value>
                <fullName>Define and Deliver the Value Proposition</fullName>
                <color>#F3D904</color>
                <label>Define and Deliver the Value Proposition</label>
            </value>
            <value>
                <fullName>Manage Momentum Through the Sales Cycle</fullName>
                <color>#A53711</color>
                <label>Manage Momentum Through the Sales Cycle</label>
            </value>
            <value>
                <fullName>Organizational Agility</fullName>
                <color>#66E9BD</color>
                <label>Organizational Agility</label>
            </value>
            <value>
                <fullName>Business Acumen</fullName>
            </value>
            <value>
                <fullName>Industry Knowledge</fullName>
            </value>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>Technical Knowledge</fullName>
            </value>
            <value>
                <fullName>Value Proposition</fullName>
            </value>
            <value>
                <fullName>Managing Momentum</fullName>
            </value>
            <value>
                <fullName>Organization Agility</fullName>
            </value>
            <value>
                <fullName>Hires Deploys &amp; Motivates Sales Talent</fullName>
            </value>
            <value>
                <fullName>Coaches &amp; Develops Sales Talent</fullName>
            </value>
            <value>
                <fullName>Manages Momentum</fullName>
            </value>
            <value>
                <fullName>Delivers Results</fullName>
            </value>
            <value>
                <fullName>Demonstrates Business Acumen</fullName>
            </value>
            <value>
                <fullName>Effective Sales MOS</fullName>
            </value>
            <value>
                <fullName>Manages Sales Momentum</fullName>
            </value>
            <value>
                <fullName>Establishes and Executes Effective Sales MOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>