src/objects/Sales_Competency_Rating__c/fields/Delta_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delta_Flag__c</fullName>
    <formula>IF( Proficiency_Delta__c &lt; 0, IMAGE(&quot;https://na19.salesforce.com/resource/1446069577000/RedFlag&quot;,&quot;Red Flag&quot;,20,20),IMAGE( &quot;https://na19.salesforce.com/resource/1446069650000/GreenFlag&quot;,&quot;Green Flag&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Flag</label>
    <type>Text</type>
</CustomField>