src/objects/Sales_Competency_Rating__c/fields/Employee_Proficiency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Employee_Proficiency_Rating__c</fullName>
    <inlineHelpText>If the manager has rated the employee proficiency below expected target, at least one sub-competency development need must be provided.</inlineHelpText>
    <label>Employee Proficiency-Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <color>#0B6FCE</color>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Experienced</fullName>
                <color>#78C953</color>
                <label>Experienced</label>
            </value>
            <value>
                <fullName>Advanced</fullName>
                <color>#E27001</color>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>Mastery</fullName>
                <color>#A845DC</color>
                <label>Mastery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>