src/objects/Sales_Competency_Rating__c/fields/Proficiency_Delta__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Delta__c</fullName>
    <formula>Proficiency_Level_Value__c  -  Target_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proficiency Delta</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>