src/objects/Sales_Competency_Rating__c/fields/Proficiency_Expectation_for_Role_Target__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Expectation_for_Role_Target__c</fullName>
    <inlineHelpText>Expected proficiency of competency based on employee&apos;s role category</inlineHelpText>
    <label>Proficiency Expectation for Role-Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Mastery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>