src/objects/Sales_Competency_Rating__c/fields/Sales_Competency_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Competency_Assessment__c</fullName>
    <label>Sales Competency Assessment</label>
    <referenceTo>Sales_Competency__c</referenceTo>
    <relationshipLabel>Sales Competency Ratings</relationshipLabel>
    <relationshipName>Sales_Competency_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>