src/objects/Sales_Competency_Rating__c/fields/Self_Assessment_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Proficiency__c</fullName>
    <description>Select the proficiency level that applies based on the definitions below.</description>
    <label>Self Assessment Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Mastery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>