src/objects/Sales_Competency_Rating__c/fields/SubCompetency_Needs_Development__c.field-meta.xml
<CustomField>
    <fullName>SubCompetency_Needs_Development__c</fullName>
    <label>Sub-Competency - Needs Development</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Competency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting &amp; opportunity identification</fullName>
            </value>
            <value>
                <fullName>Prioritizing opportunities</fullName>
            </value>
            <value>
                <fullName>Managing the opportunity pipeline</fullName>
            </value>
            <value>
                <fullName>Understanding customer&apos;s business</fullName>
            </value>
            <value>
                <fullName>Understanding customer&apos;s needs (pain)</fullName>
            </value>
            <value>
                <fullName>Developing a customer plan</fullName>
            </value>
            <value>
                <fullName>Building a win/win structure</fullName>
            </value>
            <value>
                <fullName>Developing creative financial approaches</fullName>
            </value>
            <value>
                <fullName>Controlling pace/emotion/communication</fullName>
            </value>
            <value>
                <fullName>Understanding Customers</fullName>
            </value>
            <value>
                <fullName>Leveraging Customer &amp; Industry IQ</fullName>
            </value>
            <value>
                <fullName>Building constructive tension</fullName>
            </value>
            <value>
                <fullName>Messaging/Presenting solutions</fullName>
            </value>
            <value>
                <fullName>Communicating with customers</fullName>
            </value>
            <value>
                <fullName>Working with stakeholders on value props</fullName>
            </value>
            <value>
                <fullName>Understanding customer&apos;s buying process</fullName>
            </value>
            <value>
                <fullName>Managing / controlling the process</fullName>
            </value>
            <value>
                <fullName>Building support for HON&apos;s offering</fullName>
            </value>
            <value>
                <fullName>Knowing HON stakeholders</fullName>
            </value>
            <value>
                <fullName>Utilizing internal/remote resources</fullName>
            </value>
            <value>
                <fullName>Building/participate in effective teams</fullName>
            </value>
            <value>
                <fullName>Placeholder for Sales Support</fullName>
            </value>
            <value>
                <fullName>Customer finances &amp; decisions</fullName>
            </value>
            <value>
                <fullName>Financial tools &amp; analyses</fullName>
            </value>
            <value>
                <fullName>Industry trends &amp; economic drivers</fullName>
            </value>
            <value>
                <fullName>Solution alignment to customer issues</fullName>
            </value>
            <value>
                <fullName>Know the competition &amp; share knowledge</fullName>
            </value>
            <value>
                <fullName>Confidently debates technical issues</fullName>
            </value>
            <value>
                <fullName>Simplifies concepts with authority</fullName>
            </value>
            <value>
                <fullName>Modify communications to the audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>