src/objects/Sales_Competency_Rating__c/fields/X2013_Proficiency_Delta__c.field-meta.xml
<CustomField>
    <fullName>X2013_Proficiency_Delta__c</fullName>
    <formula>IF( ISPICKVAL(Sales_Competency_Assessment__r.Assessment_Year__c , &apos;2013&apos;) , (Proficiency_Level_Value__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2013 Proficiency Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>