src/objects/Sales_Competency_Rating__c/fields/X2014_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>X2014_Target_Value__c</fullName>
    <formula>IF( ISPICKVAL(Sales_Competency_Assessment__r.Assessment_Year__c , &apos;2014&apos;) , (Target_Value__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2014 Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>