src/objects/Sales_Competency_Rating__c/validationRules/Employee_Cannot_Update_Closed_Assessment.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Cannot_Update_Closed_Assessment</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Sales_Competency_Assessment__r.Status__c, &apos;Final Approval (Manager)&apos;) &amp;&amp; ( ISCHANGED(Self_Assessment_Proficiency__c) || ISCHANGED(Examples_of_Proficiency__c) || ISCHANGED(Potential_Development_Actions__c) || ISCHANGED(Self_Assessment_Comment__c))</errorConditionFormula>
    <errorMessage>You will not be able to change the Self Assessment in Final Approval Status</errorMessage>
</ValidationRule>