src/objects/Sales_Competency_Rating__c/validationRules/Manager_should_not_change_self_assesment.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_should_not_change_self_assesment</fullName>
    <active>true</active>
    <errorConditionFormula>(($User.Id &lt;&gt; Sales_Competency_Assessment__r.User__c) &amp;&amp; ($Profile.Name &lt;&gt; &quot;System Administrator&quot;)) &amp;&amp; (
ISCHANGED(Self_Assessment_Proficiency__c) || 
ISCHANGED(Examples_of_Proficiency__c) || 
ISCHANGED(Potential_Development_Actions__c) || 
ISCHANGED(Self_Assessment_Comment__c) )</errorConditionFormula>
    <errorMessage>Manager is not allowed to edit the self assessment of employee</errorMessage>
</ValidationRule>