src/objects/Sales_Competency_Rating__c/validationRules/Prohibit_User_Changing_Own_Rating_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Prohibit_User_Changing_Own_Rating_Data</fullName>
    <active>true</active>
    <description>Prohibit manager from changing own data.</description>
    <errorConditionFormula>( Sales_Competency_Assessment__r.User__r.Id  = $User.Id) &amp;&amp; 
( 
ISCHANGED(  Competency__c  ) || 
ISCHANGED(  Proficiency_Expectation_for_Role_Target__c  ) || 
ISCHANGED(  Employee_Proficiency_Rating__c  ) || 
ISCHANGED( SubCompetency_Needs_Development__c   ) || 
ISCHANGED( Suggested_Development_Actions__c   ) ||
 ISCHANGED( Comments__c ) 
)</errorConditionFormula>
    <errorMessage>You may not change your own rating data.</errorMessage>
</ValidationRule>