src/objects/Sales_Competency_Rating__c/validationRules/Require_Needs_Development_if_BelowTarget.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Needs_Development_if_BelowTarget</fullName>
    <active>true</active>
    <description>Require Needs Development entry if Rating is below target</description>
    <errorConditionFormula>( Proficiency_Delta__c &lt;0) &amp;&amp;  ISBLANK( SubCompetency_Needs_Development__c )  &amp;&amp; ISCHANGED(Employee_Proficiency_Rating__c)</errorConditionFormula>
    <errorDisplayField>SubCompetency_Needs_Development__c</errorDisplayField>
    <errorMessage>Since the employee proficiency rating is below target, please select at least one development need.</errorMessage>
</ValidationRule>